PHORONIX TEST SUITE CHANGE-LOG

Phoronix Test Suite (Git)

- pts-core: Support compiler masking on short binaries
- pts-core: More advanced detection of compiler flags within the compiler masking process
- pts-core: DragonFlyBSD external dependency packaging updates
- pts-core: Various fixes

Phoronix Test Suite 4.6 Milestone 1
11 April 2013

- pts-core: Official support for Facebook's HipHop HHVM PHP
- pts-core: Introduce new pts_define interface
- pts-core: Add debug-self-test option for running a self-hosting PHP/PTS performance test
- pts-core: Support PHP 5.4's cli_set_process_title() function
- pts-core: For now don't use PHP CURL on HipHop HHVM due to issues
- pts-core: Ubuntu 13.04's sudo seems to have problems with the external dependency handling
- pts-core: Add internal-run command for running benchmarks in semi-automated manner and without uploading data to OpenBenchmarking.org
- phodevi: Fix for memory reporting on OS X
- phodevi: Improved LLVM Clang compiler version detection with modern Apple Xcode
- phodevi: Improved Intel Linux GPU overclocking frequency detection
- phodevi: Fix for detecting new (319.xx) NVIDIA Linux driver X.Org driver

Phoronix Test Suite 4.4.1-Forsand
14 March 2013

- pts-core: Add the arm-linux-gnueabihf library directory for PTS External Dependency checks
- pts-core: Add SKIP_ALL_TEST_SUPPORT_CHECKS environment variable
- pts-core: Fix screen resolution listening when the resolution fails to be detected through Phodevi
- pts-core: Update openSUSE external dependencies
- pts-core: Strip "project" from reported strings
- phodevi: Add support for detecting the Razor-qt desktop environment
- phodevi: No longer report the Catalyst marketing version number since the DDX is no longer reporting it reliably
- phodevi: Detect if the X.Org Server DDX module was unloaded
- phodevi: Reorder DDX driver fallback detection
- phodevi: Cleanse eCryptfs sig and cipher from showing in mounts file