@@ -1,4 +1,4 @@
-Phoronix Test Suite 4.6.0m1 <http://www.phoronix-test-suite.com/>
+Phoronix Test Suite 4.6.0m2 <http://www.phoronix-test-suite.com/>
 
 The Phoronix Test Suite is the most comprehensive testing and benchmarking
 platform available for Linux, Solaris, Mac OS X, and BSD operating systems. The
