@@ -113,8 +113,8 @@ function pts_version_codenames()
 		);
 }
 
-pts_define('PTS_VERSION', '4.6.0m1');
-pts_define('PTS_CORE_VERSION', 4510);
+pts_define('PTS_VERSION', '4.6.0m2');
+pts_define('PTS_CORE_VERSION', 4520);
 pts_define('PTS_CODENAME', 'UTSIRA');
 pts_define('PTS_IS_CLIENT', (defined('PTS_MODE') && PTS_MODE == 'CLIENT'));
 pts_define('PTS_IS_DEV_BUILD', (substr(PTS_VERSION, -2, 1) == 'm'));
